--- a/04-css/oblikovanje.css
+++ b/04-css/oblikovanje.css
@@ -56,4 +56,11 @@ h2{
     text-align: left;
     float: right;
     margin-left: 2em;
+    border-radius: 50%;
 }
+
+.slika p:last-child{
+    font-size: 0.8em;
+    padding-bottom: 0.8em;
+}
+
